--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ header {
   padding: 60px 0;
   text-align: center;
 }
+.header-content {
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+}
 .header-content h1 {
   margin: 0;
   font-size: 36px;
@@ -94,6 +98,19 @@ header p {
   margin: 10px 0 0;
   font-size: 20px;
 }
+/* animation experimentation*/
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
 
 /******************************************
 /* MAIN CONTENT
@@ -232,4 +249,5 @@ footer {
     background-color: #fdf6e3; /* warm, light background for contrast */
   }
 }
+
 
